# package-json-updater

./: .gitignore  LICENSE.md  README.md  _version.py  main.py  pyproject.toml  release.sh  requirements.txt  test-package.json
.github/workflows/: release.yml
app/: app_controller.py  dependency_model.py  git_controller.py  install_controller.py  npm_install_controller.py  nvm_controller.py  package_manager_controller.py  project_controller.py  recent_files_model.py
assets/: app_icon.icns
core/: git_info.py  maven_env.py  maven_registry.py  node_env.py  npm_cache.py  npm_registry.py  package_json.py  package_manager.py  pom_xml.py  semver_utils.py
models/: dependency.py  maven_dependency.py  settings.py
qml/: Main.qml  StartScreen.qml
qml/Pju/: Theme.qml  qmldir
qml/components/: ActionBar.qml  AppButton.qml  DependencyRow.qml  DependencyTable.qml  HeaderLabel.qml  InstallOverlay.qml  MiniPreview.qml  NpmInstallOverlay.qml  PackageManagerDialog.qml  RecentFileRow.qml  ThemeCard.qml  VersionCell.qml
qml/controls/: AppButton.qml  AppCheckBox.qml  AppComboBox.qml  AppMenu.qml  AppMenuItem.qml  AppSpinBox.qml  AppToolButton.qml  AppToolTip.qml  Badge.qml  FlashMessage.qml  LinkButton.qml  ModalDialog.qml  SplitButton.qml  (+1 more)
release/: build.bat  build.sh  convert_icon.py  package_json_updater.spec
tests/: test_app_controller_pm.py  test_exec_wiring.py  test_package_manager.py  test_pm_controller.py  test_settings_package_manager.py
translations/: __init__.py  nl.py
ui/: dependency_table.py  main_window.py  maven_dependency_table.py  mvn_install_dialog.py  npm_install_dialog.py  settings_dialog.py  settings_page.py  start_screen.py  version_cell_widget.py  version_delegate.py
workers/: fetch_worker.py  maven_fetch_worker.py
(+4 files in other folders)
