[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "package-json-updater"
version = "1.3.2.dev0"
description = "Desktop application for managing npm package dependencies"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.11.0",
    "requests>=2.34.2",
    "packaging>=26.2",
]

[project.scripts]
package-json-updater = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "models*", "ui*", "workers*"]

[tool.setuptools.package-data]
"*" = ["assets/*"]
